# runenwerk

./: .gitignore  .lychee.toml  .woodpecker.yml  AGENTS.md  AI_GUIDE.md  ARCHITECTURE.md  CRATES.md  Cargo.toml  DEPENDENCY_RULES.md  DOMAIN_MAP.md  GLOSSARY.md  LICENSE  PROJECT_GUIDELINES.md  README.md  TESTING.md  Taskfile.yml  app_neutral_ui_composition_vocabulary_design_v2.md  dagger.json  deny.toml  implement_mvp_translate_gizmo.py  pyproject.toml  quiet_editor_gate.sh  quiet_full_gate.sh  renovate.json  requests.md  roadmap.md  sgconfig.yml  workflow  workflow.cmd
adapters/native_tablet_input/: Cargo.toml
adapters/native_tablet_input/src/: lib.rs  mapping.rs  model.rs  runtime.rs
apps/grotto_online/: Cargo.toml  README.md
apps/grotto_online/src/: handoff.rs  handoff_tests.rs  operator.rs
apps/grotto_server/: Cargo.toml
apps/grotto_server/src/: main.rs  operator_control.rs
apps/runenwerk_draw/: Cargo.toml
apps/runenwerk_draw/src/: lib.rs  main.rs
apps/runenwerk_draw/tests/: app_shell.rs  composition_architecture_guards.rs
apps/runenwerk_editor/: Cargo.toml  runenwerk_editor-content.txt
apps/runenwerk_editor/src/: editor_app.rs  lib.rs  main.rs
apps/runenwerk_editor/tests/: base_controls_interaction_proof_host.rs  composition_architecture_guards.rs  phase12a_interaction_proof_host.rs  phase12b_ui_lab_interaction_story_surface.rs  region_compass_visual_capture.rs  scene_authoring_workflow_smoke.rs  startup_render_smoke.rs  viewport_architecture_guards.rs  viewport_branch_truth_smoke.rs  viewport_gpu_truth_smoke.rs  window.rs
apps/runenwerk_runtime_preview/: Cargo.toml
apps/runenwerk_runtime_preview/src/: lib.rs  main.rs
apps/runenwerk_runtime_preview/tests/: headless_child.rs
apps/ui_counter_runtime/: Cargo.toml
apps/ui_counter_runtime/src/: lib.rs  main.rs
apps/ui_counter_runtime/tests/: runtime_ownership_guards.rs  runtime_product.rs
cavern_hunt/: Cargo.toml
cavern_hunt/src/: lib.rs
cavern_hunt/src/domain/: collision_field.rs  components.rs  events.rs  geometry_graph.rs  loot.rs  material_graph.rs  material_runtime.rs  mod.rs  net_config.rs  resources.rs  snapshot.rs  worldgen.rs
cavern_hunt/src/plugins/: ai.rs  combat.rs  game.rs  hud.rs  loot.rs  materials.rs  meta.rs  mod.rs  net_config.rs  net_sync.rs  render_sdf.rs  timing.rs  worldgen.rs
cavern_hunt/tests/: fixed_step_architecture.rs  live_multiplayer.rs  worldgen.rs
cavern_hunt/tests/live_multiplayer/: four_clients.rs  helpers.rs
domain/app_program/: Cargo.toml
domain/app_program/examples/: headless_counter_ui.rs
domain/app_program/src/: action.rs  counter.rs  effect.rs  ids.rs  lib.rs  model.rs  projection.rs  reducer.rs  replay.rs  report.rs  route_action.rs
domain/app_program/tests/: headless_counter_replay.rs
domain/asset/: Cargo.toml
domain/asset/src/: artifact.rs  catalog.rs  dependency_graph.rs  diagnostics.rs  foreign_mesh.rs  id.rs  import_plan.rs  import_settings.rs  kind.rs  lib.rs  project_catalog.rs  ratification.rs  source.rs
domain/ecs/: Cargo.toml  README.md  ecs-content.txt
domain/ecs/benches/: phase35.rs  phase4.rs  phase5b.rs  phase6.rs
domain/ecs/examples/: phase35_profile.rs  phase4_profile.rs  phase5b_profile.rs  phase6_profile.rs
domain/ecs/src/: bundle.rs  component.rs  errors.rs  lib.rs  prelude.rs  telemetry.rs
domain/ecs/tests/: change_extraction.rs  docs_examples.rs  ownership.rs  public_api_boundary.rs  query_orphaned_phase7.rs  query_phase6.rs  query_snapshot.rs  reflect_struct.rs  reflected_world_access.rs  runtime_phase2.rs  runtime_phase3.rs  safety_phase3.rs  stateful_component.rs  tick_buffer_registry.rs  (+1 more)
domain/world_sdf/: Cargo.toml
domain/world_streaming/: Cargo.toml
engine/: Cargo.toml  README.md  requests.md
engine/benches/: phase35_runtime.rs  phase4_runtime.rs  phase5b_runtime.rs  phase6_runtime.rs  render_flow_planning.rs
engine/debug/: dag.dot
engine/docs/: index.md
engine/examples/: README.md  example-requests.md  render_fragment_compositor.rs  render_hybrid_ray_sdf_raster_runtime_proof.rs  render_mesh_material_production_evidence.rs  render_product_visual_evidence.rs  render_readiness_inspection.rs  render_scale_evidence.rs  render_sdf_runtime_evidence.rs  render_temporal_production_evidence.rs
engine/src/: lib.rs  main.rs  plugin.rs  prelude.rs  scene_manifest.rs  state.rs
engine/tests/: README.md  material_compiler_architecture.rs  network_plugins.rs  procedural_instance.rs  render_cutoff_guard.rs  render_dynamic_targets.rs  render_dynamic_texture_uploads.rs  render_flow_advanced.rs  render_flow_bindings.rs  render_flow_bridge.rs  render_flow_contributions.rs  render_flow_fragments.rs  render_flow_graph.rs  render_flow_graphics.rs  render_flow_v2.rs  render_gpu_params.rs  render_gpu_timing.rs  render_import_contract.rs  render_inspect.rs  render_mesh_material_handoff.rs  render_mesh_material_production_evidence.rs  render_multi_surface.rs  render_pipeline_fallback.rs  render_product_visual_evidence.rs  render_ray_query.rs  render_resource_lifetime.rs  render_resource_model.rs  render_runtime_inspect.rs  render_scale_production_evidence.rs  render_scale_visibility.rs  render_scale_working_set.rs  render_sdf_raymarch.rs  render_sdf_residency.rs  render_sdf_runtime_evidence.rs  render_temporal_inputs.rs  render_temporal_production_evidence.rs  render_temporal_upscaling.rs  replay_plugin.rs  runtime_app.rs  runtime_surface_guard.rs  (+12 more)
engine_v2/: Cargo.toml
engine_v2/src/: lib.rs  main.rs  scene_manifest.rs
foundation/commands/: Cargo.toml
foundation/id/: Cargo.toml  README.md
foundation/ratification/: Cargo.toml
foundation/schema/: Cargo.toml
games/cavern_hunt/: Cargo.toml  README.md
grotto_fleet_control/: Cargo.toml
grotto_fleet_control/src/: lib.rs  main.rs  router.rs  service.rs
grotto_online/: Cargo.toml  README.md
grotto_online/src/: handoff.rs  lib.rs  operator.rs
grotto_server/: Cargo.toml
grotto_server/src/: main.rs  operator_control.rs
net/engine_net/: Cargo.toml  README.md  REPLICATION_PIPELINE.md
net/engine_net_quic/: Cargo.toml  README.md  architecture.puml
(+5246 files in other folders)
