[workspace]
resolver = "3"
members = [
    "domain/ecs",
    "domain/ecs_macros",
    "domain/geometry",
    "domain/spatial",
    "domain/spatial_index",
    "domain/chunking",
    "domain/sdf",
    "domain/world_ops",
    "domain/world_sdf",
    "domain/scheduler",
    "domain/scene",

    "domain/ui/ui_math",
    "domain/ui/ui_input",
    "domain/ui/ui_layout",
    "domain/ui/ui_text",
    "domain/ui/ui_theme",
    "domain/ui/ui_render_data",
    "domain/ui/ui_surface",
    "domain/ui/ui_tree",
    "domain/ui/ui_runtime",
    "domain/ui/ui_widgets",

    "domain/editor/editor_core",
    "domain/editor/editor_shell",
    "domain/editor/editor_viewport",
    "domain/editor/editor_scene",
    "domain/editor/editor_inspector",
    "domain/editor/editor_persistence",

    "foundation/id",
    "foundation/id_macros",
    "foundation/diagnostics",
    "foundation/ratification",

    "engine",
    "engine_render_macros",

    "net/engine_net",
    "net/engine_net_macros",
    "net/engine_net_quic",
    "net/engine_sim",
    "net/engine_history",

    "apps/runenwerk_editor",

    "adapters/godot_chunking_addon",
]

[workspace.dependencies]
glam = "0.32.1"

scene = { path = "domain/scene" }

ui_math = { path = "domain/ui/ui_math" }
ui_input = { path = "domain/ui/ui_input" }
ui_layout = { path = "domain/ui/ui_layout" }
ui_text = { path = "domain/ui/ui_text" }
ui_theme = { path = "domain/ui/ui_theme" }
ui_render_data = { path = "domain/ui/ui_render_data" }
ui_surface = { path = "domain/ui/ui_surface" }
ui_tree = { path = "domain/ui/ui_tree" }
ui_runtime = { path = "domain/ui/ui_runtime" }
ui_widgets = { path = "domain/ui/ui_widgets" }

editor_core = { path = "domain/editor/editor_core" }
editor_shell = { path = "domain/editor/editor_shell" }
editor_viewport = { path = "domain/editor/editor_viewport" }
editor_scene = { path = "domain/editor/editor_scene" }
editor_inspector = { path = "domain/editor/editor_inspector" }
editor_persistence = { path = "domain/editor/editor_persistence" }

ecs = { path = "domain/ecs" }
