[workspace]
resolver = "3"
members = [
    "domain/ecs",
    "domain/ecs_macros",
    "domain/geometry",
    "domain/spatial",
    "domain/spatial_index",
    "domain/chunking",
    "domain/world_streaming",
    "domain/asset",
    "domain/product",
    "domain/sdf",
    "domain/world_ops",
    "domain/world_sdf",
    "domain/scheduler",
    "domain/scene",
    "domain/graph",
    "domain/texture",
    "domain/material_graph",
    "domain/procgen",
    "domain/drawing",

    "domain/ui/ui_math",
    "domain/ui/ui_input",
    "domain/ui/ui_layout",
    "domain/ui/ui_text",
    "domain/ui/ui_theme",
    "domain/ui/ui_render_data",
    "domain/ui/ui_surface",
    "domain/ui/ui_graph_editor",
    "domain/ui/ui_definition",
    "domain/ui/ui_schema",
    "domain/ui/ui_program",
    "domain/ui/ui_controls",
    "domain/ui/ui_artifacts",
    "domain/ui/ui_runtime_view",
    "domain/ui/ui_render_primitives",
    "domain/ui/ui_headless_render",
    "domain/ui/ui_headless_render_data",
    "domain/ui/ui_static_mount",
    "domain/ui/ui_compiler",
    "domain/ui/ui_evaluator",
    "domain/ui/ui_state",
    "domain/ui/ui_binding",
    "domain/ui/ui_hosts",
    "domain/ui/ui_testing",
    "domain/ui/ui_accessibility",
    "domain/ui/ui_geometry",
    "domain/ui/ui_tree",
    "domain/ui/ui_runtime",
    "domain/ui/ui_widgets",
    "domain/ui/ui_program_lowering",
    "domain/ui/ui_story",

    "domain/editor/editor_core",
    "domain/editor/editor_definition",
    "domain/editor/editor_preview",
    "domain/editor/editor_shell",
    "domain/editor/editor_viewport",
    "domain/editor/editor_scene",
    "domain/editor/editor_inspector",
    "domain/editor/editor_persistence",

    "foundation/id",
    "foundation/id_macros",
    "foundation/diagnostics",
    "foundation/ratification",
    "foundation/schema",
    "foundation/commands",
    "foundation/resource_ref",

    "engine",
    "engine_render_macros",

    "net/engine_net",
    "net/engine_net_macros",
    "net/engine_net_quic",
    "net/engine_sim",
    "net/engine_history",

    "apps/runenwerk_editor",
    "apps/runenwerk_draw",
    "apps/runenwerk_runtime_preview",

    "adapters/godot_chunking_addon",
    "adapters/native_tablet_input",
]

[workspace.dependencies]
glam = "0.32.1"
ktx2 = "0.5.0"

scene = { path = "domain/scene" }
asset = { path = "domain/asset" }
product = { path = "domain/product" }
spatial = { path = "domain/spatial" }
world_ops = { path = "domain/world_ops" }
world_sdf = { path = "domain/world_sdf" }
world_streaming = { path = "domain/world_streaming" }

ui_math = { path = "domain/ui/ui_math" }
ui_input = { path = "domain/ui/ui_input" }
ui_layout = { path = "domain/ui/ui_layout" }
ui_text = { path = "domain/ui/ui_text" }
ui_theme = { path = "domain/ui/ui_theme" }
ui_render_data = { path = "domain/ui/ui_render_data" }
ui_surface = { path = "domain/ui/ui_surface" }
ui_graph_editor = { path = "domain/ui/ui_graph_editor" }
ui_definition = { path = "domain/ui/ui_definition" }
ui_schema = { path = "domain/ui/ui_schema" }
ui_program = { path = "domain/ui/ui_program" }
ui_controls = { path = "domain/ui/ui_controls" }
ui_artifacts = { path = "domain/ui/ui_artifacts" }
ui_runtime_view = { path = "domain/ui/ui_runtime_view" }
ui_render_primitives = { path = "domain/ui/ui_render_primitives" }
ui_headless_render = { path = "domain/ui/ui_headless_render" }
ui_headless_render_data = { path = "domain/ui/ui_headless_render_data" }
ui_static_mount = { path = "domain/ui/ui_static_mount" }
ui_compiler = { path = "domain/ui/ui_compiler" }
ui_evaluator = { path = "domain/ui/ui_evaluator" }
ui_state = { path = "domain/ui/ui_state" }
ui_binding = { path = "domain/ui/ui_binding" }
ui_hosts = { path = "domain/ui/ui_hosts" }
ui_testing = { path = "domain/ui/ui_testing" }
ui_accessibility = { path = "domain/ui/ui_accessibility" }
ui_geometry = { path = "domain/ui/ui_geometry" }
ui_tree = { path = "domain/ui/ui_tree" }
ui_runtime = { path = "domain/ui/ui_runtime" }
ui_widgets = { path = "domain/ui/ui_widgets" }
ui_program_lowering = { path = "domain/ui/ui_program_lowering" }
ui_story = { path = "domain/ui/ui_story" }

native_tablet_input = { path = "adapters/native_tablet_input" }

editor_core = { path = "domain/editor/editor_core" }
editor_definition = { path = "domain/editor/editor_definition" }
editor_preview = { path = "domain/editor/editor_preview" }
editor_shell = { path = "domain/editor/editor_shell" }
editor_viewport = { path = "domain/editor/editor_viewport" }
editor_scene = { path = "domain/editor/editor_scene" }
editor_inspector = { path = "domain/editor/editor_inspector" }
editor_persistence = { path = "domain/editor/editor_persistence" }

ecs = { path = "domain/ecs" }
graph = { path = "domain/graph" }
texture = { path = "domain/texture" }
material_graph = { path = "domain/material_graph" }
procgen = { path = "domain/procgen" }
drawing = { path = "domain/drawing" }
schema = { path = "foundation/schema" }
commands = { path = "foundation/commands" }
resource_ref = { path = "foundation/resource_ref" }
