[project]
name = "runenwerk-workflow"
version = "0.1.0"
description = "Runenwerk repository workflow automation."
requires-python = ">=3.14,<3.15"
dependencies = [
    "dagger-io>=0.18,<0.19",
    "jsonschema>=4.25,<5",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "pyyaml>=6.0,<7",
    "rich>=14.2,<15",
    "typer>=0.20,<0.21",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
]

[tool.pytest.ini_options]
testpaths = ["tools/workflow"]
python_files = ["test_*.py"]

[tool.uv]
package = false
