[package]
name = "cavern_hunt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
ecs = { path = "../ecs" }
engine = { path = "../engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
wgpu = "27.0.1"
