[package]
name = "cavern_hunt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
ecs = { path = "../ecs" }
engine = { path = "../engine" }
engine_net = { path = "../engine_net" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
wgpu = "27.0.1"

[dev-dependencies]
engine_net_quic = { path = "../engine_net_quic" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
