[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracy = ["dep:tracing-tracy"]

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
pollster = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
tracing-tracy = { version = "0.11.4", optional = true }
wgpu = "27.0.1"
winit = "0.30.9"
rusttype = "0.9.3"
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ron = "0.8.1"
gltf = "1.4.1"
glam = "0.30.8"

ecs = { path = "../ecs" }
ecs_v2 = { path = "../ecs_v2" }
scheduler = { path = "../scheduler" }
grid = { path = "../grid" }

[[example]]
name = "scene_manager_ui"
path = "examples/scene_manager_ui/main.rs"

[[example]]
name = "sdf_renderer"
path = "examples/sdf_renderer/main.rs"

[[example]]
name = "runtime_minimal"
path = "examples/runtime_minimal/main.rs"

[[example]]
name = "window_input_demo"
path = "examples/window_input_demo/main.rs"
