[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracy = ["dep:tracing-tracy"]

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
pollster = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
tracing-tracy = { version = "0.11.4", optional = true }
wgpu = "27.0.1"
winit = "0.30.9"
rusttype = "0.9.3"
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ron = "0.8.1"
gltf = "1.4.1"
glam = "0.30.8"
postcard = { version = "1.1.3", features = ["alloc"] }
tokio = { version = "1.48.0", features = ["sync"] }

ecs = { path = "../domain/ecs" }
scheduler = { path = "../domain/scheduler" }
spatial = { path = "../domain/spatial" }
world_ops = { path = "../domain/world_ops" }
world_sdf = { path = "../domain/world_sdf" }
engine_render_macros = { path = "../engine_render_macros" }
engine_replay = { path = "../net/engine_history" }
engine_net = { path = "../net/engine_net" }
engine_sim = { path = "../net/engine_sim" }
crossbeam-channel = "0.5.15"

[dev-dependencies]
criterion = "0.5.1"
trybuild = "1.0.114"

[[example]]
name = "scene_manager_ui"
path = "examples/scene_manager_ui/main.rs"

[[example]]
name = "game_of_life_sdf"
path = "examples/game_of_life_sdf/main.rs"

[[example]]
name = "boids_render_flow"
path = "examples/boids_render_flow/main.rs"

[[example]]
name = "sdf_render_flow"
path = "examples/sdf_render_flow/main.rs"

[[example]]
name = "procedural_sky_sdf_terrain"
path = "examples/procedural_sky_sdf_terrain/main.rs"

[[example]]
name = "runtime_minimal"
path = "examples/runtime_minimal/main.rs"

[[example]]
name = "window_input_demo"
path = "examples/window_input_demo/main.rs"

[[example]]
name = "render_flow_fullscreen_minimal"
path = "examples/render_flow_fullscreen_minimal/main.rs"

[[example]]
name = "render_flow_postprocess_compositor"
path = "examples/render_flow_postprocess_compositor/main.rs"

[[example]]
name = "render_flow_debug_inspect"
path = "examples/render_flow_debug_inspect/main.rs"

[[bench]]
name = "phase35_runtime"
harness = false

[[bench]]
name = "phase4_runtime"
harness = false

[[bench]]
name = "phase5b_runtime"
harness = false

[[bench]]
name = "phase6_runtime"
harness = false

[[bench]]
name = "render_flow_planning"
harness = false
