[package]
name = "engine_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
pollster = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
wgpu = "27.0.1"
winit = "0.30.9"
rusttype = "0.9.3"
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ron = "0.8.1"
gltf = "1.4.1"
glam = "0.30.8"

ecs = { path = "../ecs" }
scheduler = { path = "../scheduler" }
