[package]
name = "grotto_fleet_control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures-util = "0.3.32"
grotto_online = { path = "../grotto_online" }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
kube = { version = "0.98.0", default-features = false, features = ["client", "rustls-tls"] }
ron = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = "0.28.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
