[package]
name = "grotto_online"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_net = { path = "../engine_net" }
engine_net_quic = { path = "../engine_net_quic" }
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
