[package]
name = "grotto_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
engine = { path = "../engine" }
engine_net = { path = "../engine_net" }
engine_net_quic = { path = "../engine_net_quic" }
engine_sim = { path = "../engine_sim" }
grotto_online = { path = "../grotto_online" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
