[package]
name = "native_tablet_input"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
ecs.workspace = true
engine = { path = "../../engine" }
ui_input = { workspace = true }
winit = "0.30.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_Pointer",
    "Win32_UI_WindowsAndMessaging",
] }
