[package]
name = "grotto_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cavern_hunt = { path = "../../games/cavern_hunt" }
engine = { path = "../../engine" }
ecs = { path = "../../domain/ecs" }
engine_net = { path = "../../net/engine_net" }
engine_net_quic = { path = "../../net/engine_net_quic" }
engine_sim = { path = "../../net/engine_sim" }
grotto_online = { path = "../grotto_online" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
