[package]
name = "runenwerk_draw"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
drawing.workspace = true
ecs.workspace = true
engine = { path = "../../engine" }
graph.workspace = true
native_tablet_input.workspace = true
product.workspace = true
ron = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
ui_composition.workspace = true
ui_input.workspace = true
ui_math.workspace = true
ui_render_data.workspace = true

[dev-dependencies]
winit = "0.30.9"
