[package]
name = "runenwerk_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
editor_core.workspace = true
editor_scene.workspace = true
editor_inspector.workspace = true
editor_shell.workspace = true
editor_viewport.workspace = true
editor_assets.workspace = true
editor_tools.workspace = true

ui_input.workspace = true
ui_math.workspace = true
ui_render_data.workspace = true
ui_runtime.workspace = true
ui_theme.workspace = true

ecs.workspace = true
scene.workspace = true
glam.workspace = true