[package]
name = "runenwerk_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
engine = { path = "../../engine" }
winit = "0.30.9"

editor_core.workspace = true
editor_definition.workspace = true
editor_scene.workspace = true
editor_inspector.workspace = true
editor_shell.workspace = true
editor_viewport.workspace = true
editor_persistence.workspace = true

ui_input.workspace = true
ui_definition.workspace = true
ui_math.workspace = true
ui_render_data.workspace = true
ui_surface.workspace = true
ui_text.workspace = true
ui_theme.workspace = true

ecs.workspace = true
scene.workspace = true
glam.workspace = true
ron = "0.8.1"
