[package]
name = "runenwerk_editor"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.cargo-machete]
ignored = ["bytemuck"]

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
bytemuck = { version = "1.24.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
engine = { path = "../../engine" }
winit = "0.30.9"

editor_core.workspace = true
editor_definition.workspace = true
editor_preview.workspace = true
editor_scene.workspace = true
editor_inspector.workspace = true
editor_shell.workspace = true
editor_viewport.workspace = true
editor_persistence.workspace = true

asset.workspace = true
graph.workspace = true
material_graph.workspace = true
procgen.workspace = true
product.workspace = true
resource_ref.workspace = true
spatial.workspace = true
texture.workspace = true
world_ops.workspace = true
world_sdf.workspace = true

ui_input.workspace = true
ui_artifacts.workspace = true
ui_compiler.workspace = true
ui_controls.workspace = true
ui_definition.workspace = true
ui_graph_editor.workspace = true
ui_headless_render_data.workspace = true
ui_math.workspace = true
ui_program_lowering.workspace = true
ui_render_data.workspace = true
ui_render_primitives.workspace = true
ui_runtime_view.workspace = true
ui_story.workspace = true
ui_static_mount.workspace = true
ui_surface.workspace = true
ui_text.workspace = true
ui_theme.workspace = true

ecs.workspace = true
scene.workspace = true
glam.workspace = true
ron = "0.8.1"
engine_net = { path = "../../net/engine_net" }
engine_net_quic = { path = "../../net/engine_net_quic" }
rustls = "0.23.37"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
ktx2.workspace = true
naga = { version = "27.0.3", features = ["wgsl-in"] }
