[package]
name = "ecs"
version = "0.1.0"
edition = "2024"

[features]
default = []
telemetry = ["scheduler/telemetry"]

[dependencies]
anyhow = "1.0.100"
ecs_macros = { path = "../ecs_macros" }
scheduler = { path = "../scheduler" }
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "phase35"
harness = false

[[bench]]
name = "phase4"
harness = false

[[bench]]
name = "phase5b"
harness = false

[[bench]]
name = "phase6"
harness = false

