[package]
name = "world_sdf"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
product.workspace = true
spatial = { path = "../spatial" }
world_ops = { path = "../world_ops" }
postcard = { version = "1.1.3", features = ["alloc"] }
foundation_ratification = { package = "ratification", path = "../../foundation/ratification" }
