[package]
name = "id"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Typed identity primitives and allocators for Runenwerk"
readme = "README.md"
license = "UNLICENSED"

[features]
default = ["std"]
alloc = []
std = ["alloc", "serde?/std"]
serde = ["dep:serde", "serde?/alloc"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true, default-features = false }

[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0.145"
static_assertions = "1.1.0"
