[package]
name = "schema"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []
serde = ["dep:serde", "alloc"]
diagnostics = ["dep:diagnostics", "alloc"]

[dependencies]
diagnostics = { path = "../diagnostics", optional = true, default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["alloc", "derive"], optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"
