[package]
name = "engine_net"
version = "0.1.0"
edition = "2024"

[dependencies]
ecs = { path = "../../foundation/ecs" }
engine_sim = { path = "../engine_sim" }
engine_net_macros = { path = "../engine_net_macros" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
