[package]
name = "engine_net_quic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
engine_net = { path = "../engine_net" }
quinn = "0.11.9"
rcgen = "0.13.2"
rustls = "0.23.37"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
