[package]
name = "editor_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
commands.workspace = true
editor_core.workspace = true
editor_inspector.workspace = true
glam.workspace = true
graph.workspace = true
schema.workspace = true
sdf = { path = "../../sdf" }
spatial.workspace = true
world_ops.workspace = true
world_sdf.workspace = true
